Add task management and styles

--- a/AvaloniaTodoApp/App.axaml
+++ b/AvaloniaTodoApp/App.axaml
@@ -11,5 +11,8 @@
   
     <Application.Styles>
         <FluentTheme />
+        <StyleInclude Source="Assets/Icons.axaml" />
+        <StyleInclude Source="Assets/Colors.axaml" />
+        <StyleInclude Source="Assets/Buttons.axaml" />
     </Application.Styles>
 </Application>
