--- a/AvaloniaTodoApp/Views/MainWindow.axaml
+++ b/AvaloniaTodoApp/Views/MainWindow.axaml
@@ -12,14 +12,17 @@
     <Design.DataContext>
         <!-- This only sets the DataContext for the previewer in an IDE,
              to set the actual DataContext for runtime, set the DataContext property in code (look at App.axaml.cs) -->
-        <vm:MainWindowViewModel/>
+        <vm:MainWindowViewModel />
     </Design.DataContext>
-    
-    <DockPanel Margin="20">
-        <TextBox DockPanel.Dock="Top" Watermark="Buy some fruit" />
-        <ItemsControl Background="Transparent" Margin="0 20 0 0"
-                 ItemsSource="{Binding Tasks}">
-            
-        </ItemsControl>
+
+    <DockPanel>
+        <TextBox DockPanel.Dock="Top" Margin="20" Watermark="Buy some fruit" />
+        <ScrollViewer>
+            <ItemsControl Background="Transparent"
+                          Margin="20 0"
+                          ItemsSource="{Binding Tasks}">
+
+            </ItemsControl>
+        </ScrollViewer>
     </DockPanel>
 </Window>
