--- a/AvaloniaTodoApp/Styles/Colors.axaml
+++ b/AvaloniaTodoApp/Styles/Colors.axaml
@@ -11,6 +11,9 @@
         <Style.Resources>
             <Color x:Key="DangerColor">#FF2320</Color>
             <Color x:Key="DangerColorDark">#BA1B18</Color>
+            <Color x:Key="PrimaryColor">rgb(0, 120, 215)</Color>
+            <Color x:Key="PrimaryColorDark">rgb(0, 88, 158)</Color>
+            <Color x:Key="PrimaryColorLight">rgb(38, 159, 255)</Color>
         </Style.Resources>
     </Style>
 </Styles>
