--- a/AvaloniaTodoApp/App.axaml
+++ b/AvaloniaTodoApp/App.axaml
@@ -3,16 +3,25 @@
              x:Class="AvaloniaTodoAPp.App"
              xmlns:local="using:AvaloniaTodoAPp"
              RequestedThemeVariant="Default">
-             <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
+    <!-- "Default" ThemeVariant follows system theme variant. "Dark" or "Light" are other available options. -->
 
     <Application.DataTemplates>
-        <local:ViewLocator/>
+        <local:ViewLocator />
     </Application.DataTemplates>
-  
+
     <Application.Styles>
-        <FluentTheme />
-        <StyleInclude Source="Assets/Icons.axaml" />
-        <StyleInclude Source="Assets/Colors.axaml" />
-        <StyleInclude Source="Assets/Buttons.axaml" />
+        <FluentTheme DensityStyle="Normal" />
+        <StyleInclude Source="Styles/Icons.axaml" />
+        <StyleInclude Source="Styles/Colors.axaml" />
+        <StyleInclude Source="Styles/Buttons.axaml" />
+        <StyleInclude Source="Styles/General.axaml" />
     </Application.Styles>
+
+    <Application.Resources>
+        <ResourceDictionary>
+            <ResourceDictionary.MergedDictionaries>
+                <MergeResourceInclude Source="Resources/StaticTexts.axaml" />
+            </ResourceDictionary.MergedDictionaries>
+        </ResourceDictionary>
+    </Application.Resources>
 </Application>
