--- a/AvaloniaTodoApp/Views/TodoTaskView.axaml
+++ b/AvaloniaTodoApp/Views/TodoTaskView.axaml
@@ -25,6 +25,7 @@
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
                 <ColumnDefinition Width="*"></ColumnDefinition>
                 <ColumnDefinition Width="Auto"></ColumnDefinition>
+                <ColumnDefinition Width="Auto"></ColumnDefinition>
             </Grid.ColumnDefinitions>
             <CheckBox Grid.Column="0"
                       VerticalAlignment="Center"
@@ -45,6 +46,18 @@
                            Text="{Binding Created}" />
             </StackPanel>
             <Button Grid.Column="2"
+                    DockPanel.Dock="Right"
+                    Classes="icon primary"
+                    VerticalAlignment="Center"
+                    Margin="10 0 0 0"
+                    Command="{Binding ToggleImportantCommand}"
+                    Tapped="ToggleImportant">
+                <Panel>
+                    <PathIcon Data="{StaticResource AlertRegular}" IsVisible="{Binding !Important}" />
+                    <PathIcon Data="{StaticResource AlertOffRegular}" IsVisible="{Binding Important}" />
+                </Panel>
+            </Button>
+            <Button Grid.Column="3"
                     DockPanel.Dock="Right"
                     Classes="icon danger"
                     VerticalAlignment="Center"
